# ds_project_team_1

./: .env.env  .gitignore  README.md  docker-compose.yaml
services/backend/: Dockerfile  app.py  pyproject.toml
services/backend/model/: efficientnetb1-cifar10.ipynb  efficientnetv2b1_cifar100.ipynb
services/backend/src/: __init__.py  __main__.py  config.py
services/backend/src/application/constants/: images.py
services/backend/src/application/exceptions/: images.py
services/backend/src/handlers/: __init__.py  main.py
services/backend/src/handlers/images/: __init__.py  exception_handlers.py
services/backend/src/routers/: __init__.py  main.py
services/backend/src/routers/images/: __init__.py  images_router_handlers.py
services/backend/src/schemas/: images.py
services/backend/src/services/: __init__.py  images.py
services/backend/src/utils/: cifar_labels.py
services/frontend/: package-lock.json  package.json
services/frontend/public/: index.html
services/frontend/src/: App.vue  main.js
services/frontend/src/components/: ImageForm.vue  ImageItem.vue  ImageList.vue  imageUpload.vue
