[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vaipik <n.khylko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
tensorflow = "^2.12.0"
pillow = "^9.5.0"
opencv-python = "^4.7.0.72"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
